@@ -1,3 +1,0 @@
-{% load  linkcheck_coverage_tags %}
-<html><head></head>
-<body>{% for config in coverage_data %}{{ config|render_config }}{% endfor %}</body></html>
